fixed gap between parent div .box and child divs .contend and .image

--- a/styles/style.css
+++ b/styles/style.css
@@ -13,10 +13,11 @@ body{
     flex: 1;
     display: flex;
 
-    max-width: 100vh;
-    max-height: 90vh;
+    max-width: 60vh;
+    max-height: 50vh;
 
     border-radius: 3%;
+
 }
 
 .image{
@@ -35,6 +36,7 @@ body{
 
 .content{
     max-width: 100%;
+    max-height: 100%;
 
     display: flex;
     flex-direction: column;
@@ -133,69 +135,84 @@ body{
     font-family: 'Montserrat', sans-serif;
 }
 
+
+/*BIG SCREEN */
+@media screen and (max-height: 600px) {
+
+    .box{
+        max-width: 100vh;
+        max-height: 80vh;
+    }
+}
+
 /*  MOBILE VERSION */
 
 @media screen and (max-width: 440px) {
+    @media screen and (min-height: 650px){
+        body{
+            /*background-color: hsl(30, 38%, 92%);*/
+            background-color: aqua;
+            }
+    
+        .box{
+            display: flex;
+            flex-direction: column;
+    
+            max-width: 100%;
+            max-height: 100%;
+    
+            margin-inline: 3vmin ;
+            margin-block: 2vmin;
+    
+            
+        }
+    
+        .image{
+            min-width: 100%;
+            border-bottom-left-radius: 0%;
+            margin-bottom: -0.9vmin;
+    
+        }
+        .image img{
+            
+            border-bottom-left-radius: 0%;
+            border-top-right-radius: 3%;
+            
+            min-width: 100%;
+            max-height: 100%;
+            
+        }
+        .content{
 
-    body{
-        display: flex;
-        background-color: hsl(30, 38%, 92%);
-        
-        align-items: flex-start;
-        justify-content: center;
+            flex: 1;
+
+            min-height: 100%;
+    
+            border-top-right-radius: 0%;
+            border-bottom-left-radius: 3%;
         }
 
-    .box{
-        display: flex;
-        flex-direction: column;
-
-        justify-content:flex-start;
-
-        height: 85%;
-
-        margin-inline: 3vmin ;
-        margin-block: 5vmin;
-
+        #type_product{
+            font-size: 1.5em;
+        }
+    
+        #title_product {
+            font-size: 0.9em;
+        }
+    
+        #description_product{
+            font-size: 0.9em;
+        }
+    
+        #price_now {
+            font-size: 1.5em;
+        }
+    
+        #price_old {
+            font-size: 2em;
+        }
         
     }
 
-    .content{
-        
-        height: 90%;
 
-        border-top-right-radius: 0%;
-        border-bottom-left-radius: 3%;
-    }
-
-    .image{
-        min-height: 38%;
-        border-bottom-left-radius: 0%;
-
-    }
-    .image img{
-
-        border-bottom-left-radius: 0%;
-        border-top-right-radius: 3%;
-        max-width: 100%;
-    }
-
-    #type_product{
-        font-size: 1.5em;
-    }
-
-    #title_product {
-        font-size: 0.9em;
-    }
-
-    #description_product{
-        font-size: 0.9em;
-    }
-
-    #price_now {
-        font-size: 1.5em;
-    }
-
-    #price_old {
-        font-size: 2em;
-    }
 }
